# text-to-sql

./: .gitignore  README.md  cli.py  pyproject.toml
scripts/: build_kb.py  create_readonly_role.sql  load_data.py
src/txt2sql/: config.py  guardrail.py  llm.py
src/txt2sql/agents/: fuzzy.py  generate.py  prompts.py  retrieval.py  router.py
src/txt2sql/db/: engine.py  schema.py
src/txt2sql/graph/: pipeline.py
tests/: test_guardrail.py
